Stats test done

--- a/02 - Data from the Web/Notebook.ipynb
+++ b/02 - Data from the Web/Notebook.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -106,8 +106,12 @@
     "def get_and_parse_url(url, params = []):\n",
     "    resp = requests.get(url, params=params)\n",
     "    if not resp.ok:\n",
-    "        raise Error(\"Unable to fecth page: \" + resp.reason)\n",
-    "    return BeautifulSoup(resp.text, determine_content_parser(resp))\n",
+    "        raise ValueError(\"Unable to fecth page: \" + resp.reason)\n",
+    "    try:\n",
+    "        return BeautifulSoup(resp.text, determine_content_parser(resp))\n",
+    "    except FeatureNotFound as exc:\n",
+    "        raise ValueError(\"You have no parser for the format \" + determine_content_parser(resp))\n",
+    "        \n",
     "\n",
     "index_page = get_and_parse_url(index_url, index_params)"
    ]
@@ -154,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -193,8 +197,7 @@
     "        semester_params = info_index_params.copy()\n",
     "        semester_params[\"ww_x_GPS\"] = semester[0]\n",
     "        \n",
-    "        semester_html = requests.get(semester_url, params=semester_params).text\n",
-    "        semester_page = BeautifulSoup(semester_html, \"lxml\")\n",
+    "        semester_page = get_and_parse_url(semester_url, params=semester_params)\n",
     "        \n",
     "        students = []\n",
     "        # Iterate all rows, except the ones that have headers\n",
@@ -251,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -273,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -330,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -370,26 +373,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'bar'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-26d17bfd118b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mba_frac_per_gender\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mba_frac_per_gender\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'bar'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>men</th>\n",
+       "      <th>women</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>duration</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2.5</th>\n",
+       "      <td>0.075362</td>\n",
+       "      <td>0.038462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.0</th>\n",
+       "      <td>0.588406</td>\n",
+       "      <td>0.769231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.5</th>\n",
+       "      <td>0.043478</td>\n",
+       "      <td>0.038462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.0</th>\n",
+       "      <td>0.197101</td>\n",
+       "      <td>0.153846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.5</th>\n",
+       "      <td>0.011594</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5.0</th>\n",
+       "      <td>0.063768</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.0</th>\n",
+       "      <td>0.017391</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7.0</th>\n",
+       "      <td>0.002899</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               men     women\n",
+       "duration                    \n",
+       "2.5       0.075362  0.038462\n",
+       "3.0       0.588406  0.769231\n",
+       "3.5       0.043478  0.038462\n",
+       "4.0       0.197101  0.153846\n",
+       "4.5       0.011594  0.000000\n",
+       "5.0       0.063768  0.000000\n",
+       "6.0       0.017391  0.000000\n",
+       "7.0       0.002899  0.000000"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ba_frac_per_gender.plot.bar()\n",
-    "ba_frac_per_gender"
+    "ba_frac_per_gender\n",
+    "ba_frac_per_gender.plot.bar()"
    ]
   },
   {
@@ -401,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -453,9 +524,52 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Our null hypothesis is that both men and women have the same distribution for their time to finish a bachelor in CS. To find out if this difference in mean is significant we then perform a two-sample T-test. Since the difference between both standard deviation is so big we assume the variance of the samples is not equal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Significant statistical difference between men and women!\n",
+      "Probability to have this distribution if both group take the same time for bachelor completion is 0.0099\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats \n",
+    "\n",
+    "ba_men_duration = of_gender(ba_students, \"M\")[\"duration\"]\n",
+    "ba_women_duration = of_gender(ba_students, \"F\")[\"duration\"]\n",
+    "\n",
+    "result = stats.ttest_ind(a=ba_men_duration, b=ba_women_duration, \n",
+    "                axis=0, equal_var=False)\n",
+    "\n",
+    "if result.pvalue <= 0.05:\n",
+    "    # Significant statistical difference at the 0.05 level!\n",
+    "    print(\"Significant statistical difference between men and women!\")\n",
+    "    print(\"Probability to have this distribution if both group take the same time for bachelor completion is %0.4f\" % \n",
+    "          result.pvalue)\n",
+    "else:\n",
+    "    print(\"No significant difference between men and women\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This result means there is only 0.99% (less than 1%!) chance that both these samples have the same distribution. So we conclude that women finish their bachelor faster than men on average.\n",
+    "\n",
     "We can confirm this hypothesis by adding two hypothetical female students that would take 7 years to do their bachelor, as much as the \"worst\" men. The average would then move by `2*(7-3.15)/(52+2) = 0.14`, which would move the female average to 3.39, matching men's.  \n",
     "In other words, because there are so few women in CS bachelor ( :( ), the mean doesn't mean (ha!) much as even a tiny amount of outliers could shift it."
    ]
@@ -1037,6 +1151,56 @@
     "The only minors that stand out are \"Signals, Images and Interfaces\" and \"Mineur en Ingénierie financière\".\n",
     "\n",
     "In other words, hardware and finance people are crazy. No new information there. (dear peer reviewer: this is a joke :) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now proceed to test the statistical significance of the difference in mean between each of the minor and the general average at a 5% significance level."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Significant difference at the 0.05 level for the Signals, Images and Interfaces\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib64/python3.4/site-packages/numpy/core/_methods.py:82: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  warnings.warn(\"Degrees of freedom <= 0 for slice\", RuntimeWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ma_gen_avg = ma_students[\"duration\"].tolist()\n",
+    "sig_lvl = 0.05\n",
+    "\n",
+    "for minor in ma_minors:\n",
+    "    minor_duration = of_minor(ma_students, minor)[\"duration\"].tolist()\n",
+    "    i += 1\n",
+    "    \n",
+    "    if len(minor_duration) == 0:\n",
+    "        continue\n",
+    "        \n",
+    "    res = stats.ttest_ind(ma_gen_avg, minor_duration)\n",
+    "    \n",
+    "    if res.pvalue <= sig_lvl:\n",
+    "        # The probability that they have the same distribution is less\n",
+    "        # than 5% (our significance level)\n",
+    "        print(\"Significant difference at the %0.2f level for the %s\" % \n",
+    "              (sig_lvl, minor))"
    ]
   },
   {
