--- a/04 - Applied ML/04 - Applied ML.ipynb
+++ b/04 - Applied ML/04 - Applied ML.ipynb
@@ -2247,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -2255,15 +2255,13 @@
     {
      "data": {
       "text/plain": [
-       "Index(['playerShort', 'player', 'club', 'leagueCountry', 'birthday', 'height',\n",
-       "       'weight', 'position', 'games', 'victories', 'ties', 'defeats', 'goals',\n",
-       "       'yellowCards', 'yellowReds', 'redCards', 'photoID', 'rater1', 'refNum',\n",
-       "       'refCountry', 'Alpha_3', 'meanIAT', 'nIAT', 'seIAT', 'meanExp', 'nExp',\n",
-       "       'seExp', 'skintone'],\n",
+       "Index(['playerShort', 'club', 'leagueCountry', 'height', 'weight', 'games',\n",
+       "       'victories', 'ties', 'defeats', 'goals', 'yellowCards', 'yellowReds',\n",
+       "       'redCards', 'refCountry', 'Alpha_3', 'meanIAT', 'meanExp', 'skintone'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2271,18 +2269,142 @@
    "source": [
     "# Now dropping features that are useless for our classification\n",
     "\n",
-    "dropping = ['position', 'birthday', 'photoID', 'nExp', 'seExp', 'seIAT', 'refNum', 'nIAT', 'rater1', 'rater2']\n",
+    "dropping = ['player', 'position', 'birthday', 'photoID', 'nExp', 'seExp', 'seIAT', 'refNum', 'nIAT', 'rater1', 'rater2']\n",
     "\n",
     "for c in dropping:\n",
-    "    final = cleaned.drop(c, axis=1)\n",
+    "    try:\n",
+    "        cleaned.drop(c, axis=1, inplace=True)\n",
+    "    except:\n",
+    "        continue\n",
     "# Hopefully players play a certain role based on their skill ...\n",
     "# The referee certainly has nothing to do with the player's skin color :X\n",
     "# More black people are born on certain date ? :D\n",
     "# The name of the photo, seriously? \n",
-    "# The standard error and count for IAT and Exp are based on countries not on the players themselves so we can remove it as well\n",
+    "# The standard error and count for IAT and Exp are based on countries not on the players themselves so we can remove them as well\n",
     "\n",
-    "final.columns"
+    "cleaned.columns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Label encoding\n",
+    "----------------------\n",
+    "Since scikit-learn only supports numerical data we need to create a mapping between our textual data and a numerical represtation. We do this using the LabelEncoder from scikit-learn. See [here](http://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90996     2\n",
+       "120764    0\n",
+       "97490     0\n",
+       "95132     2\n",
+       "126111    0\n",
+       "Name: leagueCountry, dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "features = cleaned.drop('skintone', axis=1) # The features df is the same but without the response variable\n",
+    "\n",
+    "for f in features.columns:\n",
+    "    encoder = LabelEncoder()\n",
+    "    labels = encoder.fit_transform(features[f])\n",
+    "    features[f] = labels\n",
+    "    \n",
+    "labels = LabelEncoder().fit_transform(cleaned['skintone'])\n",
+    "\n",
+    "features.refCountry.sample(5) # Verify that we have no text left \n",
+    "features.leagueCountry.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forest Classifier training\n",
+    "--------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.4)\n",
+    "\n",
+    "clf = RandomForestClassifier()\n",
+    "\n",
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99049971880774479"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
