--- a/04 - Applied ML/04 - Applied ML.ipynb
+++ b/04 - Applied ML/04 - Applied ML.ipynb
@@ -2247,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -2255,13 +2255,13 @@
     {
      "data": {
       "text/plain": [
-       "Index(['playerShort', 'club', 'leagueCountry', 'height', 'weight', 'games',\n",
-       "       'victories', 'ties', 'defeats', 'goals', 'yellowCards', 'yellowReds',\n",
-       "       'redCards', 'refCountry', 'Alpha_3', 'meanIAT', 'meanExp', 'skintone'],\n",
+       "Index(['club', 'leagueCountry', 'height', 'weight', 'games', 'victories',\n",
+       "       'ties', 'defeats', 'goals', 'yellowCards', 'yellowReds', 'redCards',\n",
+       "       'refCountry', 'Alpha_3', 'meanIAT', 'meanExp', 'skintone'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2282,6 +2282,8 @@
     "# The name of the photo, seriously? \n",
     "# The standard error and count for IAT and Exp are based on countries not on the players themselves so we can remove them as well\n",
     "\n",
+    "cleaned = cleaned.groupby('playerShort').agg('first') # Only keep one entry per player\n",
+    "\n",
     "cleaned.columns"
    ]
   },
@@ -2296,7 +2298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -2304,15 +2306,16 @@
     {
      "data": {
       "text/plain": [
-       "90996     2\n",
-       "120764    0\n",
-       "97490     0\n",
-       "95132     2\n",
-       "126111    0\n",
+       "playerShort\n",
+       "cheikh-ndiaye         1\n",
+       "ansotegi              3\n",
+       "lisandro-lopez        1\n",
+       "branislav-ivanovic    0\n",
+       "phil-jagielka         0\n",
        "Name: leagueCountry, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2343,41 +2346,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False)"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.cross_validation import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.4)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3)\n",
     "\n",
-    "clf = RandomForestClassifier()\n",
+    "model = RandomForestClassifier()\n",
     "\n",
-    "clf.fit(X_train, y_train)"
+    "clf = model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -2385,16 +2372,86 @@
     {
      "data": {
       "text/plain": [
-       "0.99049971880774479"
+       "0.28781512605042014"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.268164 with std of -+ 0.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.cross_validation import cross_val_score\n",
+    "\n",
+    "score = cross_val_score(clf, X_test, y_test, cv=9)\n",
+    "\n",
+    "print(\"Accuracy: %f with std of -+ %0.2f\" % (score.mean(), score.std()*2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems the classification is not very accurate...\n",
+    "\n",
+    "Features importance\n",
+    "-------------------------\n",
+    "\n",
+    "We will now examine the importance of each feature in our model and determine which one can be safely removed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature importance 0.156514: club\n",
+      "Feature importance 0.044332: leagueCountry\n",
+      "Feature importance 0.147141: height\n",
+      "Feature importance 0.153660: weight\n",
+      "Feature importance 0.051848: games\n",
+      "Feature importance 0.051399: victories\n",
+      "Feature importance 0.039087: ties\n",
+      "Feature importance 0.047761: defeats\n",
+      "Feature importance 0.032020: goals\n",
+      "Feature importance 0.044983: yellowCards\n",
+      "Feature importance 0.004110: yellowReds\n",
+      "Feature importance 0.002934: redCards\n",
+      "Feature importance 0.055352: refCountry\n",
+      "Feature importance 0.054774: Alpha_3\n",
+      "Feature importance 0.047597: meanIAT\n",
+      "Feature importance 0.066486: meanExp\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in range(len(features.columns)):\n",
+    "    print(\"Feature importance %f: %s\" %(clf.feature_importances_[idx], features.columns[idx]))"
    ]
   },
   {
