--- a/04 - Applied ML/04 - Applied ML.ipynb
+++ b/04 - Applied ML/04 - Applied ML.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib64/python3.4/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
+      "  \"`IPython.html.widgets` has moved to `ipywidgets`.\", ShimWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import pandas as pd\n",
@@ -1846,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1888,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1943,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -1963,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1978,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -2013,23 +2022,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib64/python3.4/site-packages/ipykernel/__main__.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def map_discretize(val):\n",
     "    if val < 0.5:\n",
@@ -2047,32 +2044,12 @@
     "Classification\n",
     "============\n",
     "\n",
-    "Dropping useless features\n",
-    "---------------------------------------------------------\n",
-    "\n",
-    "We now delete a few features that seems completely unrelated to a player's skin color"
+    "Cleaning up dataset before classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Now dropping features that are useless for our classification\n",
-    "\n",
-    "dropping = ['player', 'position', 'birthday', 'photoID', 'nExp', 'seExp', 'seIAT', 'refNum', 'nIAT']\n",
-    "r = cleaned.copy()\n",
-    "\n",
-    "for c in dropping:\n",
-    "        r = r.drop(c, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -2087,20 +2064,15 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 479,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Hopefully players play a certain role based on their skill ...\n",
-    "# The referee certainly has nothing to do with the player's skin color :X\n",
-    "# More black people are born on certain date ? :D\n",
-    "# The name of the photo, seriously? \n",
-    "# The standard error and count for IAT and Exp are based on countries not on the players themselves so we can remove them as well\n",
-    "r = r.drop('player', axis=1)\n",
+    "r = cleaned.copy()\n",
     "r = r.groupby('playerShort').agg('first') # Only keep one entry per player\n",
-    "r = r.dropna()\n",
+    "r = r.dropna().drop('player', axis=1)\n",
     "\n",
     "r.columns"
    ]
