--- a/05 - Taming Text/Notebook.ipynb
+++ b/05 - Taming Text/Notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +271,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -551,7 +551,8 @@
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -587,6 +588,187 @@
     "The variance is enormous, though, which makes a lot of data points pretty useless.\n",
     "\n",
     "Also, from playing around with PyCountries, we notice that there are probably a lot of missed references, since e.g. \"Vietnam\" is not counsidered a country while \"Viet Nam\" is. While the latter may be the technically correct name, most people would just write it \"Vietnam\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Part 3: Topic modeling\n",
+    "\n",
+    "Let's do this!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Program Files\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:840: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
+      "C:\\Program Files\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:1015: UserWarning: Pattern library is not installed, lemmatization won't be available.\n",
+      "  warnings.warn(\"Pattern library is not installed, lemmatization won't be available.\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gensim\n",
+    "from gensim.corpora import Dictionary\n",
+    "from gensim.models.ldamodel import LdaModel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... so we get two warnings, one for using a decent OS ( :) ), and one because a library is not installed. We'd love to install this library... if it was available for Python 3. :|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anyway, we have to build a corpus, which apparently can be built from a list of list of strings. So let's re-use the pipeline, per email."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "emails_tokens = [pipeline_text(email[\"RawText\"]) for _, email in hillary_emails.iterrows()]\n",
+    "emails_corpus = Dictionary(emails_tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we use this dictionary to convert documents to vectors of stuff. (I'm a bit lost there, can you tell? :) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "emails_vectors = [emails_corpus.doc2bow(tokens) for tokens in emails_tokens]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can finally create the LDA model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "emails_lda = LdaModel(emails_vectors, num_topics=50, id2word=emails_corpus)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And manually analyze the results:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  =  state 2015 subject depart u f date unclassifi 05 doc\n",
+      "1  =  state u said depart case 2015 unclassifi date doc 20439\n",
+      "2  =  u state thoma ebel date court law case 2015 doc\n",
+      "3  =  state u depart f sent subject case 2014 unclassifi date\n",
+      "4  =  http 08 www com parti obama 1 voter democrat depart\n",
+      "5  =  state u depart date 20439 case 2014 f 2015 doc\n",
+      "6  =  state com 2015 subject unclassifi doc h sent case windrush\n",
+      "7  =  u 31 08 haiti state 20439 2014 2010 f would\n",
+      "8  =  israel state isra arab palestinian u peac 2015 doc case\n",
+      "9  =  state u 2014 2010 depart unclassifi 20439 f case 2015\n",
+      "10  =  state u depart unclassifi f 2014 date case 20439 2015\n",
+      "11  =  state date 2015 u doc f parti depart unclassifi 2014\n",
+      "12  =  state u 2015 f case subject depart date unclassifi doc\n",
+      "13  =  state u sent subject f date depart 2014 20439 2015\n",
+      "14  =  state u 2015 date doc unclassifi f case subject depart\n",
+      "15  =  state 2015 u f depart unclassifi case doc subject dip\n",
+      "16  =  http u www depart state beck govern lib case devolv\n",
+      "17  =  pledg state editori countri burden 2015 china u nyt date\n",
+      "18  =  iran china state u iranian 2015 f depart sanction 08\n",
+      "19  =  u 31 state 20439 2014 case date depart unclassifi f\n",
+      "20  =  boehner state u unclassifi f 2015 hous date case depart\n",
+      "21  =  u treati state defens 2015 f missil doc date woman\n",
+      "22  =  u state 20439 31 year depart student work unclassifi one\n",
+      "23  =  state u depart case f unclassifi 20439 2014 doc 2015\n",
+      "24  =  u state expo http 2010 palau blog shanghai doc co\n",
+      "25  =  state u news depart sent case 2014 right subject doc\n",
+      "26  =  state palestinian israel isra u settlement negoti date 2015 doc\n",
+      "27  =  cheryl sent mill subject state u doc 2015 f 2014\n",
+      "28  =  dup ireland northern state deal u 2010 parti agreement doc\n",
+      "29  =  senat republican state u depart f vote case date democrat\n",
+      "30  =  develop u state pakistan diplomaci depart public unclassifi program 2015\n",
+      "31  =  clinton state u date depart 2014 said presid doc case\n",
+      "32  =  state u c05771329 c05771907 c05771805 c05771806 2015 c05771908 c05771465 depart\n",
+      "33  =  state cameron flood uk aj guardian said torus doc 2015\n",
+      "34  =  compani koch corpor mr u own state 20439 hugo f\n",
+      "35  =  state u depart case date f unclassifi 2015 doc 2014\n",
+      "36  =  state hiker e date f que u unclassifi 2015 depart\n",
+      "37  =  afghanistan afghan militari forc u secur state said taliban wikileak\n",
+      "38  =  state u 2015 case david consul depart date subject famili\n",
+      "39  =  state u 2015 subject depart date unclassifi doc f sent\n",
+      "40  =  regist 1 state 3 unfavor 2010 lp 2 doc u\n",
+      "41  =  u state f case depart 08 unclassifi doc 2015 date\n",
+      "42  =  state sent subject 2010 h 08 31 date u doc\n",
+      "43  =  u state depart 2015 rajiv case backward doc date alyc\n",
+      "44  =  state u 2015 case f unclassifi depart doc 20439 2014\n",
+      "45  =  aipac state subject 2015 jun monica case u doc com\n",
+      "46  =  colombia state u 2015 colombian unclassifi case urib secretari f\n",
+      "47  =  u depart state 20439 2014 f date germani unclassifi doc\n",
+      "48  =  offic secretari depart state 00 8 10 30 15 w\n",
+      "49  =  state se u ap news depart doc 2015 reuter case\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(emails_lda.num_topics):\n",
+    "    text = \" \".join([word for word, _ in emails_lda.show_topic(i)])\n",
+    "    print(i, \" = \" , text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8 is about a peace treaty between Israel and Palestine, and so is 26. 37 has something to do with military presence in Afghanistan. Most of these are almost random-looking."
    ]
   },
   {
